<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QGoal">

    <include
        android:id="@+id/bottombar"
        layout="@layout/question_defualt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/Question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:text="@string/Question4"
         />

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/login_background"
        android:layout_below="@+id/Question4">

        <RadioButton
            android:id="@+id/GetShraded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/GetShraded" />

        <RadioButton
            android:id="@+id/GetLean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/GetLean" />

        <RadioButton
            android:id="@+id/Re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Re" />

        <RadioButton
            android:id="@+id/Mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Mass" />

        <RadioButton
            android:id="@+id/MassMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MassMass" />

        <RadioButton
            android:id="@+id/Fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Fat" />

        <RadioButton
            android:id="@+id/Str"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Str" />


    </RadioGroup>

    <Button
        android:id="@+id/Purpose_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="2dp"
        android:padding="3dp"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_below="@+id/radioGroup"
        android:text="@string/Purpose_button" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@+id/Purpose_button"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:progress="33"
        android:id="@+id/Purpose_ProgressBar"
        />

    <TextView
        android:id="@+id/ProgressPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_below= "@+id/Purpose_ProgressBar"
        android:gravity="center"
        android:text="@string/ProgressBarPercentage_Purpose"
        />
</RelativeLayout>
