<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/defualt_question_background"
    tools:context=".CreateNewFood">

    <TextView
        android:id="@+id/CreateNewFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:text="@string/CreateNewFood"
        />


    <TextView
        android:id="@+id/NewFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/CreateNewFood"
        android:text="@string/NewFoodName" />

    <EditText
        android:id="@+id/FillNewFoodName"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:inputType="textPersonName"
        android:layout_below="@+id/NewFoodName"
        android:text="@string/FillNewFoodName" />
    <TextView
        android:id="@+id/FoodType"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FillNewFoodName"
        android:text="@string/FoodType" />

    <Spinner
        android:id="@+id/FoodTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:autofillHints="Choose"
        android:gravity="center"
        android:layout_below="@+id/FoodType"
         />

    <TextView
        android:id="@+id/CaloriesPer100Grams"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FoodTypeSpinner"
        android:text="@string/CaloriesPer100Grams" />

    <EditText
        android:id="@+id/FillCaloriesPer100Grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:inputType="numberDecimal"
        android:layout_below="@+id/CaloriesPer100Grams"
        android:text="@string/FillCaloriesPer100Grams" />
    <TextView
        android:id="@+id/ProtinsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FillCaloriesPer100Grams"
        android:text="@string/ProtinsPer100Grams" />

    <EditText
        android:id="@+id/FillProtinsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_below="@+id/ProtinsPer100Grams"
        android:text="@string/FillProtinsPer100Grams" />
    <TextView
        android:id="@+id/CarbsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FillProtinsPer100Grams"
        android:text="@string/CarbsPer100Grams" />

    <EditText
        android:id="@+id/FillCarbsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:inputType="numberDecimal"
        android:layout_below="@+id/CarbsPer100Grams"
        android:text="@string/FillCarbsPer100Grams" />
    <TextView
        android:id="@+id/FatsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FillCarbsPer100Grams"
        android:text="@string/FatsPer100Grams" />

    <EditText
        android:id="@+id/FillFatsPer100Grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/bright_color_text_for_dark_background"
        android:hint="Enter Number"
        android:inputType="numberDecimal"
        android:layout_below="@+id/FatsPer100Grams"
        android:text="@string/FillFatsPer100Grams" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddNewFoodButtonLayout1"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AddNewFoodButtonLayout2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AddNewFoodButton"
                android:layout_width="match_parent"
                android:background="@drawable/main_menu_button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/AddNewFoodButton"
                />
            <Button
                android:id="@+id/DeleteFoodButton"
                android:layout_width="match_parent"
                android:background="@drawable/main_menu_button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/DeleteFoodButton"
                />
            <Button
                android:id="@+id/Main_Menu"
                android:layout_width="match_parent"
                android:background="@drawable/main_menu_button"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Main_Menu"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>